* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 3.1.2-0
- Support puppetlabs/stdlib 6.x and puppet 6.x.

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 3.1.1-0
- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
  Puppet 3 function.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 3.1.0-0
- Update badges and contribution guide URL in README.md

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 3.1.0-0
- Updated $app_pki_external_source to accept any string. This matches the
  functionality of pki::copy.

* Fri Jul 06 2018 Trevor Vaughan <tvaughan@onyxpont.com> - 3.1.0-0
- Added Puppet 5 and OEL support

* Fri Jun 15 2018 Nick Miller <nick.miller@onyxpoint.com> - 3.0.3-0
- Remove unneeded fixtures and update CI assets

* Thu Nov 09 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.2-0
- Bug fixes:
  - Set up FIPS-compliant configuration, not just when
    simp_options::fips is true, but also when the server is already
    in FIPS mode.
  - Insert token password into the NSS database after configuring
    the NSS database for FIPS.
- Updated the tests.

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.1-0
- Confine puppet version in metadata.json

* Fri Jan 13 2017 Nick Markowski <nmarkowski@keywcorp.com> - 3.0.0-0
- Updated pki scheme.
- Application certs now managed in /etc/pki/simp_apps/libreswan/x509

* Thu Dec 22 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.0.0-0
- Update Global Catalysts
- Strong type

* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 2.0.0-0
- Update version to reflect SIMP6 dependencies
- Update to SIMP6 dependencies
- Minor cleanup

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 1.0.1-0
- Minor cleanup

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.0-0
- Updated iptables dependency version
