@@ -6,13 +6,5 @@ fixtures:
     pki: https://github.com/simp/pupmod-simp-pki
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/simp/puppetlabs-stdlib
-
-    # Fixtures required for the acceptance test
-    # auditd: https://github.com/simp/pupmod-simp-auditd
-    # augeasproviders_core: https://github.com/simp/augeasproviders_core
-    # augeasproviders_grub: https://github.com/simp/augeasproviders_grub
-    # logrotate: https://github.com/simp/pupmod-simp-logrotate
-    # rsyslog: https://github.com/simp/pupmod-simp-rsyslog
-    # simpcat: https://github.com/simp/pupmod-simp-simpcat
   symlinks:
     libreswan: "#{source_dir}"
