@@ -1,6 +1,6 @@
 {
   "name": "simp-libreswan",
-  "version": "3.1.2",
+  "version": "3.2.0",
   "author": "SIMP Team",
   "summary": "Manages IPSec VPN Tunnels",
   "license": "Apache-2.0",
@@ -60,7 +60,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.7.0 < 7.0.0"
+      "version_requirement": ">= 5.0.0 < 7.0.0"
     }
   ]
 }
